--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
         <!-- TODO: Change relative local references to root (/) references throughout -->
         <link rel="shortcut icon" href="./favicon.ico">
         <!-- TODO: Change favicon.ico to svg -->
-
         <!-- TODO: Use more meta fields:
              https://ogp.me/
              https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/abouts-cards -->
+
+        <!-- Scripts -->
+        <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
@@ -102,11 +106,5 @@
                 </figure>
             </div>
         </section>
-
-        <!-- Load scripts after everything else in the document -->
-        <!-- TODO: lolnope, see "Script Loading Strategies":
-             https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript#Comments -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </body>
 </html>
