--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,10 @@
         <meta name="description" content="Online Resume for David A. Buzzell">
         <link rel="shortcut icon" href="./favicon.ico">
 
+        <!-- Scripts -->
+        <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
@@ -25,7 +29,6 @@
             <div class="page-header">
                 <h1>Projects</h1>
             </div>
-
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
@@ -36,21 +39,17 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <figure class="col-sm-4">
                     <h1 class="centered-head small-head">Capstone Projects</h1>
                 </figure>
-
                 <figure class="col-sm-4">
                     <h1 class="centered-head small-head">Research</h1>
                 </figure>
-
                 <figure class="col-sm-4">
                     <h1 class="centered-head small-head">Music</h1>
                 </figure>
             </div>
-
             <div class="row projectrow">
                 <figure class="col-lg-4">
                     <h3 class="centered-head">Music and Technology Capstone</h3>
@@ -166,15 +165,11 @@
                 </figure>
             </div>
         </section>
-
         <footer class="container">
             <div class="row">
+                <!-- TODO: Update copyright -->
                 <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
             </div>
         </footer>
-
-        <!-- Load scripts after everything else in the document -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </body>
 </html>
