--- a/projects/hybrid-instruments.html
+++ b/projects/hybrid-instruments.html
@@ -14,6 +14,10 @@
         <meta name="description" content="Online Resume for David A. Buzzell">
         <link rel="shortcut icon" href="../favicon.ico">
 
+        <!-- Scripts -->
+        <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
@@ -24,7 +28,6 @@
             <div class="page-header">
                 <h1>Projects</h1>
             </div>
-
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
@@ -35,14 +38,12 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="centered-head small-head">Hybrid Instruments</h1>
                     <h3 class="centered-head">Summer Research Project</h3>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <p class="project-text">
@@ -59,7 +60,6 @@
                     </p>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <div class="writeup-text">
@@ -71,15 +71,10 @@
                 </div>
             </div>
         </section>
-
         <footer class="container">
             <div class="row">
                 <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
             </div>
         </footer>
-
-        <!-- Load scripts after everything else in the document -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </body>
 </html>
