--- a/projects/non-contact-eeg.html
+++ b/projects/non-contact-eeg.html
@@ -14,6 +14,10 @@
         <meta name="description" content="Online Resume for David A. Buzzell">
         <link rel="shortcut icon" href="../favicon.ico">
 
+        <!-- Scripts -->
+        <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
@@ -24,7 +28,6 @@
             <div class="page-header">
                 <h1>Projects</h1>
             </div>
-
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
@@ -35,14 +38,12 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="centered-head small-head">Non-Contact/Wireless EEG Electrode System</h1>
                     <h3 class="centered-head">Summer Research Project</h3>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <p class="project-text">
@@ -67,7 +68,6 @@
                     </p>
                 </div>
             </div>
-
             <div class="row">
                 <figure class="col-sm-4">
                     <div class="writeup-text">
@@ -94,13 +94,11 @@
                     </div>
                 </figure>
             </div>
-
             <div class="row projectrow">
                 <div class="col-lg-12">
                     <h2 class="centered-head">Some design files from lab presentation</h2>
                 </div>
             </div>
-
             <div id="myCarousel" class="carousel slide" data-interval="false">
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -109,7 +107,6 @@
                     <li data-target="#myCarousel" data-slide-to="3"></li>
                     <li data-target="#myCarousel" data-slide-to="4"></li>
                 </ol>
-
                 <div class="carousel-inner">
                     <div class="item active">
                         <a href="../images/noncontact1.jpg">
@@ -120,7 +117,6 @@
                             </div>
                         </a>
                     </div>
-
                     <div class="item">
                         <a href="../images/noncontact2.jpg">
                             <img src="../images/noncontact2.jpg" alt="Non-Contact 2" style="width:100%">
@@ -130,7 +126,6 @@
                             </div>
                         </a>
                     </div>
-
                     <div class="item">
                         <a href="../images/noncontact3.jpg">
                             <img src="../images/noncontact3.jpg" alt="Non-Contact 3" style="width:100%">
@@ -140,7 +135,6 @@
                             </div>
                         </a>
                     </div>
-
                     <div class="item">
                         <a href="../images/noncontact4.jpg">
                             <img src="../images/noncontact4.jpg" alt="Non-Contact 4" style="width:100%">
@@ -152,7 +146,6 @@
                             </div>
                         </a>
                     </div>
-
                     <div class="item">
                         <a href="../images/noncontact5.jpg">
                             <img src="../images/noncontact5.jpg" alt="Non-Contact 5" style="width:100%">
@@ -165,27 +158,20 @@
                         </a>
                     </div>
                 </div>
-
                 <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-
                 <a class="right carousel-control" href="#myCarousel" data-slide="next">
                     <span class="glyphicon glyphicon-chevron-right"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
         </section>
-
         <footer class="container">
             <div class="row">
                 <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
             </div>
         </footer>
-
-        <!-- Load scripts after everything else in the document -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </body>
 </html>
