--- a/projects/orchestration-final-project.html
+++ b/projects/orchestration-final-project.html
@@ -14,18 +14,20 @@
         <meta name="description" content="Online Resume for David A. Buzzell">
         <link rel="shortcut icon" href="../favicon.ico">
 
+        <!-- Scripts -->
+        <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
     </head>
-
     <body>
         <section class="container">
             <div class="page-header">
                 <h1>Projects</h1>
             </div>
-
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
@@ -36,14 +38,12 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="centered-head small-head">Large Symphonic Orchestration with Audio Sampling and Synthesis</h1>
                     <h3 class="centered-head">Orchestration Final Project</h3>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <p class="project-text">
@@ -62,7 +62,6 @@
                     </p>
                 </div>
             </div>
-
             <div class="row">
                 <figure class="col-sm-6">
                     <div class="writeup-text">
@@ -81,15 +80,10 @@
                 </figure>
             </div>
         </section>
-
         <footer class="container">
             <div class="row">
                 <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
             </div>
         </footer>
-
-        <!-- Load scripts after everything else in the document -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </body>
 </html>
