--- a/work/student-life.html
+++ b/work/student-life.html
@@ -14,18 +14,20 @@
         <meta name="description" content="Online Resume for David A. Buzzell">
         <link rel="shortcut icon" href="../favicon.ico">
 
+        <!-- Scripts -->
+        <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
     </head>
-
     <body>
         <section class="container">
             <div class="page-header">
                 <h1>Work Experience</h1>
             </div>
-
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
@@ -36,14 +38,12 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="centered-head small-head">Student Life at Carnegie Mellon University</h1>
                     <h3 class="centered-head">Community Advisor, Resident Assistant, Pre-College Counselor</h3>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <p class="project-text">
@@ -56,7 +56,6 @@
                     </p>
                 </div>
             </div>
-
             <div class="row" id="community-advisor">
                 <div class="col-lg-12">
                     <p class="project-text">
@@ -71,7 +70,6 @@
                     </p>
                 </div>
             </div>
-
             <div class="row" id="resident-assistant">
                 <div class="col-lg-12">
                     <p class="project-text">
@@ -97,7 +95,6 @@
                 </div>
             </div>
         </section>
-
         <footer class="container">
             <div class="row">
                 <p class="col-lg-4">
@@ -105,9 +102,5 @@
                 </p>
             </div>
         </footer>
-
-        <!-- Load scripts after everything else in the document -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  </body>
+    </body>
 </html>
