--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 
 <!-- Welcome to my Online Resume Website! The main framework for this website is Bootstrap, but all of the other
-     HTML/CSS/JS files have been designed solely by myself, using only online tutorials and classes for reference.
+     HTML/CSS/JS files have been designed solely by myself, using only online tutorials and classes for reference. -->
+<!-- Validated by https://validator.w3.org/nu/ -->
 
-     Validated by https://validator.w3.org/nu/ -->
 <!-- TODO: validate programmatically:
            https://github.com/validator/validator/wiki/Service-%C2%BB-Input-%C2%BB-POST-body
            https://github.com/marketplace/actions/ftp-deploy -->
-
 <!-- TODO: change titles to David A. Buzzell for all html pages -->
 <!-- TODO: expand description on each page -->
 <!-- TODO: use main/header/footer/article/section/asides when appropriate -->
