Removing failure, it works properly!

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Unordered Meta Content -->
-        <title>David A. Buzzell
+        <title>David A. Buzzell</title>
         <meta name="author" content="David Buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
         <link rel="shortcut icon" href="./favicon.ico">
