fixed the link, also updated copyright

--- a/projects/music-generation-tool.html
+++ b/projects/music-generation-tool.html
@@ -52,7 +52,7 @@
                         implements recursive backtracking to randomly generate the remaining measures of music to play back to you.<br>
                         <br>
                         Below is a link to the
-                        <strong><a href="https://github.com/xhamyd/term-project">Github repo</a></strong> that details each part of this project,
+                        <strong><a href="https://github.com/xhamyd/music-generation-tool">Github repo</a></strong> that details each part of this project,
                         including code files, documentation, timesheet of hours spent on each part, and how to setup and run the project. Next to that
                         link is a
                         <strong><a href="https://www.youtube.com/watch?v=hdQuuhRBFQE">video presentation</a></strong>,
@@ -79,7 +79,7 @@
         </section>
         <footer class="container">
             <div class="row">
-                <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
+                <p class="col-lg-4">&copy; 2020 David Alexander Buzzell</p>
             </div>
         </footer>
     </body>
