updated, also added header link (discrete)

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         </nav>
         <section class="container">
             <div class="jumbotron">
-                <h1>David A. Buzzell</h1>
-                <h3>Software Engineer at iRobot</h3>
+                <h1><a href="mailto:mail@davidbuzzell.com" id="name_header">David Buzzell</a></h1>
+                <h3>SQA Engineer at DSP Concepts</h3>
                 <h3>Bachelor of Science: Electrical & Computer Engineering, Music & Technology</h3>
             </div>
             <div class="well">
                 <p id="welltext">
-                    Exploring opportunities to develop software solutions to support the music technology industry
+                    Building audio software solutions to support the music technology industry
                 </p>
             </div>
             <div class="row projectrow">
