--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Unordered Meta Content -->
-        <title>Contact</title>
+        <title>David Buzzell</title>
         <meta name="author" content="David Buzzell">
-        <meta name="description" content="Online Resume for David A. Buzzell">
+        <meta name="description" content="Online Resume for David Buzzell">
         <link rel="shortcut icon" href="favicon.ico">
 
         <!-- Scripts -->
