--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Unordered Meta Content -->
-        <title>David A. Buzzell</title>
+        <title>David Buzzell</title>
         <meta name="author" content="David Buzzell">
-        <meta name="description" content="Online Resume for David A. Buzzell">
+        <meta name="description" content="Online Resume for David Buzzell">
         <link rel="shortcut icon" href="./favicon.ico">
 
         <!-- Scripts -->
@@ -61,7 +61,7 @@
                                         <br>
                                         <br>
                                         Online Resume Website:<br>
-                                        David A. Buzzell
+                                        David Buzzell
                                     </p>
                                 </div>
                             </div>
