--- a/resume.html
+++ b/resume.html
@@ -8,9 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Unordered Meta Content -->
-        <title>Resume</title>
+        <title>David Buzzell</title>
         <meta name="author" content="David Buzzell">
-        <meta name="description" content="Online Resume for David A. Buzzell">
+        <meta name="description" content="Online Resume for David Buzzell">
         <link rel="shortcut icon" href="./favicon.ico">
 
         <!-- Scripts -->
@@ -340,7 +340,7 @@
         </section>
         <footer class="container">
             <div class="row">
-                <p class="col-sm-4">&copy; 2020 David Alexander Buzzell</p>
+                <p class="col-sm-4">&copy; 2020 David Buzzell</p>
             </div>
         </footer>
     </body>
