--- a/projects/orchestration-final-project.html
+++ b/projects/orchestration-final-project.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Unordered Meta Content -->
-        <title>David Buzell</title>
+        <title>David Buzzell</title>
         <meta name="author" content="David Buzzell">
         <meta name="description" content="Online Resume for David Buzzell">
         <link rel="shortcut icon" href="../favicon.ico">
