--- a/projects.html
+++ b/projects.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Unordered Meta Content -->
-        <title>David Buzzell</title>
-        <meta name="author" content="David Buzzell">
+        <title>online resume</title>
+        <meta name="author" content="online resume">
         <meta name="description" content="Online Resume for David Buzzell">
         <link rel="shortcut icon" href="./favicon.ico">
 
@@ -164,7 +164,7 @@
         </section>
         <footer class="container">
             <div class="row">
-                <p class="col-lg-4">&copy; 2020 David Buzzell</p>
+                <p class="col-lg-4">&copy; 2020 online resume</p>
             </div>
         </footer>
     </body>
