Hold on, files aren't uploading

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <title>David Buzzell</title>
         <meta name="author" content="David Buzzell">
         <meta name="description" content="Online Resume for David Buzzell">
-        <link rel="shortcut icon" href="./favicon.ico">
+        <link rel="shortcut icon" href="/favicon.ico">
 
         <!-- Scripts -->
         <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -23,11 +23,12 @@
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
         <nav class="navbar">
             <!-- Just to create some header row space -->
+            <a href="/">CLick ME</a>
         </nav>
         <section class="container">
             <div class="jumbotron">
