--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <title>David Buzzell</title>
         <meta name="author" content="David Buzzell">
         <meta name="description" content="Online Resume for David Buzzell">
-        <link rel="shortcut icon" href="/favicon.ico">
+        <link rel="shortcut icon" href="favicon.ico">
 
         <!-- Scripts -->
         <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -28,7 +28,6 @@
     <body>
         <nav class="navbar">
             <!-- Just to create some header row space -->
-            <a href="/">Click Me!</a>
         </nav>
         <section class="container">
             <div class="jumbotron">
