--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,10 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
-                        <a href="./index.html" class="btn btn-primary">Home</a>
-                        <a href="./resume.html" class="btn btn-primary">Resume</a>
-                        <a href="./projects.html" class="btn btn-primary">Projects</a>
-                        <a href="./contact.html" class="btn btn-primary active">Contact</a>
+                        <a href="index.html" class="btn btn-primary">Home</a>
+                        <a href="resume.html" class="btn btn-primary">Resume</a>
+                        <a href="projects.html" class="btn btn-primary">Projects</a>
+                        <a href="contact.html" class="btn btn-primary active">Contact</a>
                     </div>
                 </div>
             </div>
