All files updated (though can't locally confirm changes)

--- a/projects/music-tech-capstone.html
+++ b/projects/music-tech-capstone.html
@@ -11,7 +11,7 @@
         <title>David Buzzell</title>
         <meta name="author" content="David Buzzell">
         <meta name="description" content="Online Resume for David Buzzell">
-        <link rel="shortcut icon" href="../favicon.ico">
+        <link rel="shortcut icon" href="/favicon.ico">
 
         <!-- Scripts -->
         <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -20,7 +20,7 @@
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
-        <link rel="stylesheet" type="text/css" href="../css/main.css">
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
         <section class="container">
@@ -30,10 +30,10 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
-                        <a href="../index.html" class="btn btn-primary">Home</a>
-                        <a href="../resume.html" class="btn btn-primary">Resume</a>
-                        <a href="../projects.html" class="btn btn-primary">Projects</a>
-                        <a href="../contact.html" class="btn btn-primary">Contact</a>
+                        <a href="/index.html" class="btn btn-primary">Home</a>
+                        <a href="/resume.html" class="btn btn-primary">Resume</a>
+                        <a href="/projects.html" class="btn btn-primary">Projects</a>
+                        <a href="/contact.html" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                         speaker ring.<br>
                         <br>
                         Below is a link to the materials used in the presentation of this project, including a
-                        <strong><a href="../documents/resume-website/music-technology-project-writeup.pdf">Project Writeup (PDF)</a></strong> and
+                        <strong><a href="/documents/resume-website/music-technology-project-writeup.pdf">Project Writeup (PDF)</a></strong> and
                         <strong><a href="https://www.youtube.com/watch?v=XfvVWxyaobQ">Video Demonstration</a></strong>
                         for viewers that were unable to attend the live demonstration of this system.
                     </p>
@@ -62,7 +62,7 @@
                 <figure class="col-sm-6">
                     <div class="writeup-text">
                         <h3>Project Writeup</h3>
-                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/music-technology-project-writeup.pdf" role="button">
+                        <a class="btn btn-primary btn-lg" href="/documents/resume-website/music-technology-project-writeup.pdf" role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
