--- a/projects/non-contact-eeg.html
+++ b/projects/non-contact-eeg.html
@@ -11,7 +11,7 @@
         <title>David Buzzell</title>
         <meta name="author" content="David Buzzell">
         <meta name="description" content="Online Resume for David Buzzell">
-        <link rel="shortcut icon" href="../favicon.ico">
+        <link rel="shortcut icon" href="/favicon.ico">
 
         <!-- Scripts -->
         <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -20,7 +20,7 @@
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
-        <link rel="stylesheet" type="text/css" href="../css/main.css">
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
         <section class="container">
@@ -30,10 +30,10 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
-                        <a href="../index.html" class="btn btn-primary">Home</a>
-                        <a href="../resume.html" class="btn btn-primary">Resume</a>
-                        <a href="../projects.html" class="btn btn-primary">Projects</a>
-                        <a href="../contact.html" class="btn btn-primary">Contact</a>
+                        <a href="/index.html" class="btn btn-primary">Home</a>
+                        <a href="/resume.html" class="btn btn-primary">Resume</a>
+                        <a href="/projects.html" class="btn btn-primary">Projects</a>
+                        <a href="/contact.html" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
             </div>
@@ -60,8 +60,8 @@
                         allowing researchers to test for brainwave patterns and health issues.<br>
                         <br>
                         Below are links to some of the diagrams and findings for this project. This includes the
-                        <strong><a href="../documents/resume-website/design-presentation.pdf">Design Presentation</a></strong> used for our large team meetings, the
-                        <strong><a href="../documents/resume-website/shopping-list-for-lab-meeting-presentation.pdf">Parts Presentation</a></strong> that details exactly the components required for our proposed system, and the
+                        <strong><a href="/documents/resume-website/design-presentation.pdf">Design Presentation</a></strong> used for our large team meetings, the
+                        <strong><a href="/documents/resume-website/shopping-list-for-lab-meeting-presentation.pdf">Parts Presentation</a></strong> that details exactly the components required for our proposed system, and the
                         <strong><a href="https://github.com/xhamyd/NonContactElectrode">EAGLE Design Files</a></strong> to demonstrate the assembly of the electrode circuitry.
                         Beneath that is an image slideshow of some of the graphics created to illustrate our electrode design.
                     </p>
@@ -71,7 +71,7 @@
                 <figure class="col-sm-4">
                     <div class="writeup-text">
                         <h3>Design Presentation</h3>
-                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/design-presentation.pdf" role="button">
+                        <a class="btn btn-primary btn-lg" href="/documents/resume-website/design-presentation.pdf" role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
@@ -79,7 +79,7 @@
                 <figure class="col-sm-4">
                     <div class="writeup-text">
                         <h3>Parts Presentation</h3>
-                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/shopping-list-for-lab-meeting-presentation.pdf" role="button">
+                        <a class="btn btn-primary btn-lg" href="/documents/resume-website/shopping-list-for-lab-meeting-presentation.pdf" role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
@@ -108,8 +108,8 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <a href="../images/noncontact1.jpg">
-                            <img src="../images/noncontact1.jpg" alt="Non-Contact 1" style="width:100%">
+                        <a href="/images/noncontact1.jpg">
+                            <img src="/images/noncontact1.jpg" alt="Non-Contact 1" style="width:100%">
                             <div class="carousel-caption">
                                 <h3>Electrode Schematic</h3>
                                 <p>Top-down sketch of electrode</p>
@@ -117,8 +117,8 @@
                         </a>
                     </div>
                     <div class="item">
-                        <a href="../images/noncontact2.jpg">
-                            <img src="../images/noncontact2.jpg" alt="Non-Contact 2" style="width:100%">
+                        <a href="/images/noncontact2.jpg">
+                            <img src="/images/noncontact2.jpg" alt="Non-Contact 2" style="width:100%">
                             <div class="carousel-caption">
                                 <h3>Electrode-Base Connections</h3>
                                 <p>Signal line connection map between electrodes and PCB amplifier circuit</p>
@@ -126,8 +126,8 @@
                         </a>
                     </div>
                     <div class="item">
-                        <a href="../images/noncontact3.jpg">
-                            <img src="../images/noncontact3.jpg" alt="Non-Contact 3" style="width:100%">
+                        <a href="/images/noncontact3.jpg">
+                            <img src="/images/noncontact3.jpg" alt="Non-Contact 3" style="width:100%">
                             <div class="carousel-caption">
                                 <h3>Base-Arduino Connections</h3>
                                 <p>Signal line connection map between PCB amplifier base and microcontroller (Arduino Uno)</p>
@@ -135,8 +135,8 @@
                         </a>
                     </div>
                     <div class="item">
-                        <a href="../images/noncontact4.jpg">
-                            <img src="../images/noncontact4.jpg" alt="Non-Contact 4" style="width:100%">
+                        <a href="/images/noncontact4.jpg">
+                            <img src="/images/noncontact4.jpg" alt="Non-Contact 4" style="width:100%">
                             <div class="carousel-caption">
                                 <h3>Split Electrode Design - Doughnut</h3>
                                 <p>
@@ -146,8 +146,8 @@
                         </a>
                     </div>
                     <div class="item">
-                        <a href="../images/noncontact5.jpg">
-                            <img src="../images/noncontact5.jpg" alt="Non-Contact 5" style="width:100%">
+                        <a href="/images/noncontact5.jpg">
+                            <img src="/images/noncontact5.jpg" alt="Non-Contact 5" style="width:100%">
                             <div class="carousel-caption">
                                 <h3>Split Electrode Design - Semicircles</h3>
                                 <p>
