--- a/projects/orchestration-final-project.html
+++ b/projects/orchestration-final-project.html
@@ -11,7 +11,7 @@
         <title>David Buzzell</title>
         <meta name="author" content="David Buzzell">
         <meta name="description" content="Online Resume for David Buzzell">
-        <link rel="shortcut icon" href="../favicon.ico">
+        <link rel="shortcut icon" href="/favicon.ico">
 
         <!-- Scripts -->
         <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -20,7 +20,7 @@
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
-        <link rel="stylesheet" type="text/css" href="../css/main.css">
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
         <section class="container">
@@ -30,10 +30,10 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
-                        <a href="../index.html" class="btn btn-primary">Home</a>
-                        <a href="../resume.html" class="btn btn-primary">Resume</a>
-                        <a href="../projects.html" class="btn btn-primary">Projects</a>
-                        <a href="../contact.html" class="btn btn-primary">Contact</a>
+                        <a href="/index.html" class="btn btn-primary">Home</a>
+                        <a href="/resume.html" class="btn btn-primary">Resume</a>
+                        <a href="/projects.html" class="btn btn-primary">Projects</a>
+                        <a href="/contact.html" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                         <br>
                         With this knowledge and practice, I completed a final project that took the basics of a melody line (created by the
                         professor), and transformed it to a large, 34-part orchestral work. Below are links to the
-                        <strong><a href="../documents/resume-website/final-project-orchestration.pdf">Sheet Music</a></strong> and a
+                        <strong><a href="/documents/resume-website/final-project-orchestration.pdf">Sheet Music</a></strong> and a
                         <strong><a href="https://www.youtube.com/watch?v=n1Kp4D6ud14">Video</a></strong>
                         which contains the synthesized audio recording along with the sheet music, scrolling in time with the recording.
                     </p>
@@ -65,7 +65,7 @@
                 <figure class="col-sm-6">
                     <div class="writeup-text">
                         <h3>Sheet Music</h3>
-                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/final-project-orchestration.pdf" role="button">
+                        <a class="btn btn-primary btn-lg" href="/documents/resume-website/final-project-orchestration.pdf" role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
