--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
         <title>David Buzzell</title>
         <meta name="author" content="David Buzzell">
         <meta name="description" content="Online Resume for David Buzzell">
-        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="shortcut icon" href="/favicon.ico">
 
         <!-- Scripts -->
         <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -20,7 +20,7 @@
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
         <section class="container">
@@ -30,10 +30,10 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
-                        <a href="index.html" class="btn btn-primary">Home</a>
-                        <a href="resume.html" class="btn btn-primary">Resume</a>
-                        <a href="projects.html" class="btn btn-primary active">Projects</a>
-                        <a href="contact.html" class="btn btn-primary">Contact</a>
+                        <a href="/index.html" class="btn btn-primary">Home</a>
+                        <a href="/resume.html" class="btn btn-primary">Resume</a>
+                        <a href="/projects.html" class="btn btn-primary active">Projects</a>
+                        <a href="/contact.html" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
             </div>
@@ -52,8 +52,8 @@
                 <figure class="col-lg-4">
                     <h3 class="centered-head">Music and Technology Capstone</h3>
                     <div class="overlay-box">
-                        <a href="projects/music-tech-capstone.html">
-                            <img src="images/project1.jpg" class="img-thumbnail" alt="Project 1">
+                        <a href="/projects/music-tech-capstone.html">
+                            <img src="/images/project1.jpg" class="img-thumbnail" alt="Project 1">
                             <div class="overlay">
                                 <div class="text">
                                     <p>
@@ -73,8 +73,8 @@
                 <figure class="col-lg-4">
                     <h3 class="centered-head">Non-Contact EEG System</h3>
                     <div class="overlay-box">
-                        <a href="projects/non-contact-eeg.html">
-                            <img src="images/project2.jpg" class="img-thumbnail" alt="Project 2">
+                        <a href="/projects/non-contact-eeg.html">
+                            <img src="/images/project2.jpg" class="img-thumbnail" alt="Project 2">
                             <div class="overlay">
                                 <div class="text"><p>
                                     <br>
@@ -90,8 +90,8 @@
                 <figure class="col-lg-4">
                     <h3 class="centered-head">Orchestration Final Project</h3>
                     <div class="overlay-box">
-                        <a href="projects/orchestration-final-project.html">
-                            <img src="images/project3.jpg" class="img-thumbnail" alt="Project 3">
+                        <a href="/projects/orchestration-final-project.html">
+                            <img src="/images/project3.jpg" class="img-thumbnail" alt="Project 3">
                             <div class="overlay">
                                 <div class="text"><p>
                                     <br>
@@ -110,8 +110,8 @@
                 <figure class="col-lg-4">
                     <h3 class="centered-head">ECE Capstone</h3>
                     <div class="overlay-box">
-                        <a href="projects/ece-capstone.html">
-                            <img src="images/project4.jpg" class="img-thumbnail" alt="Project 4">
+                        <a href="/projects/ece-capstone.html">
+                            <img src="/images/project4.jpg" class="img-thumbnail" alt="Project 4">
                             <div class="overlay">
                                 <div class="text"><p>
                                     <br>
@@ -128,8 +128,8 @@
                 <figure class="col-lg-4">
                     <h3 class="centered-head">Hybrid Instruments</h3>
                     <div class="overlay-box">
-                        <a href="projects/hybrid-instruments.html">
-                            <img src="images/project5.jpg" class="img-thumbnail" alt="Project 5">
+                        <a href="/projects/hybrid-instruments.html">
+                            <img src="/images/project5.jpg" class="img-thumbnail" alt="Project 5">
                             <div class="overlay">
                                 <div class="text"><p>
                                     <br>
@@ -146,8 +146,8 @@
                 <figure class="col-lg-4">
                     <h3 class="centered-head">Music Generation Tool</h3>
                     <div class="overlay-box">
-                        <a href="projects/music-generation-tool.html">
-                            <img src="images/project6.jpg" class="img-thumbnail" alt="Project 6">
+                        <a href="/projects/music-generation-tool.html">
+                            <img src="/images/project6.jpg" class="img-thumbnail" alt="Project 6">
                             <div class="overlay">
                                 <div class="text"><p>
                                     <br>
