27 relative to root references (#43)
* Hold on, files aren't uploading

* Removing unnecessary Pycharm highlighting

* Starting for clean now

* Removing unnecessary Pycharm highlighting

* Branch updates

* index.html updated

* resume.html updated

* projects.html updated

* contact.html updated

* All files updated (though can't locally confirm changes)

* Docker local testing integrated

* Markdown lint fix

* Markdown lint fix, adding status badge

* How's that for some YAML cleanup?

* Fixed review comment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <title>David Buzzell</title>
         <meta name="author" content="David Buzzell">
         <meta name="description" content="Online Resume for David Buzzell">
-        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="shortcut icon" href="/favicon.ico">
 
         <!-- Scripts -->
         <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -23,7 +23,7 @@
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
         <nav class="navbar">
@@ -43,18 +43,18 @@
             <div class="row projectrow">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
-                        <a href="./index.html" class="btn btn-primary active">Home</a>
-                        <a href="./resume.html" class="btn btn-primary">Resume</a>
-                        <a href="./projects.html" class="btn btn-primary">Projects</a>
-                        <a href="./contact.html" class="btn btn-primary">Contact</a>
+                        <a href="/index.html" class="btn btn-primary active">Home</a>
+                        <a href="/resume.html" class="btn btn-primary">Resume</a>
+                        <a href="/projects.html" class="btn btn-primary">Projects</a>
+                        <a href="/contact.html" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
             </div>
             <div class="row homeimg">
                 <figure class="col-md-6">
                     <div class="overlay-box">
-                        <a href="./resume.html">
-                            <img src="./images/homeimg.jpg" class="img-thumbnail" alt="Resume Website">
+                        <a href="/resume.html">
+                            <img src="/images/homeimg.jpg" class="img-thumbnail" alt="Resume Website">
                             <div class="overlay">
                                 <div class="homeimg-text">
                                     <p>
@@ -71,7 +71,7 @@
                 <figure class="col-md-6">
                     <div class="overlay-box">
                         <a href="https://music.davidbuzzell.com/love-is-dead">
-                            <img src="./images/5sog-demo-pic.jpg" class="img-thumbnail" alt="Love is Dead">
+                            <img src="/images/5sog-demo-pic.jpg" class="img-thumbnail" alt="Love is Dead">
                             <div class="overlay">
                                 <div class="homeimg-text">
                                     <p>
