--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
         <title>David Buzzell</title>
         <meta name="author" content="David Buzzell">
         <meta name="description" content="Online Resume for David Buzzell">
-        <link rel="shortcut icon" href="./favicon.ico">
+        <link rel="shortcut icon" href="/favicon.ico">
 
         <!-- Scripts -->
         <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -20,27 +20,26 @@
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
         <section class="container">
             <div class="page-header">
                 <h1>Resume</h1>
-                <a class="btn btn-primary btn-lg" href="./documents/resume-website/resume-david-buzzell.pdf" role="button">
+                <a class="btn btn-primary btn-lg" href="/documents/resume-website/resume-david-buzzell.pdf" role="button">
                     <span class="glyphicon glyphicon-file"></span> View PDF
                 </a>
             </div>
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
-                        <a href="./index.html" class="btn btn-primary">Home</a>
-                        <a href="./resume.html" class="btn btn-primary active">Resume</a>
-                        <a href="./projects.html" class="btn btn-primary">Projects</a>
-                        <a href="./contact.html" class="btn btn-primary">Contact</a>
+                        <a href="/index.html" class="btn btn-primary">Home</a>
+                        <a href="/resume.html" class="btn btn-primary active">Resume</a>
+                        <a href="/projects.html" class="btn btn-primary">Projects</a>
+                        <a href="/contact.html" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
             </div>
-            <!-- EDUCATION -->
             <div class="row">
                 <div class="col-sm-3">
                     <h3>EDUCATION</h3>
@@ -60,7 +59,6 @@
                 </div>
             </div>
             </div>
-            <!-- CERTIFICATIONS -->
             <div class="row">
                 <div class="col-sm-3">
                     <h3>CERTIFICATIONS</h3>
@@ -78,16 +76,13 @@
                     </div>
                 </div>
             </div>
-            <!-- WORK EXPERIENCE -->
             <div class="row top-row">
                 <div class="col-sm-3">
-                    <h3><a class="discrete-links" href="./work.html">WORK EXPERIENCE</a></h3>
+                    <h3><a class="discrete-links" href="/work.html">WORK EXPERIENCE</a></h3>
                 </div>
                 <div class="col-sm-7">
                     <div class="inner-text">
-                        <a class="discrete-links" href="./work/irobot.html">
-                            <strong>Software Engineer</strong>
-                        </a> at iRobot<br>
+                        <a class="discrete-links" href="/work/irobot.html"><strong>Software Engineer</strong></a> at iRobot<br>
                         <em>Robot Simulator Specialist</em>
                         <ul>
                             <li>Supported uptime of simulated robots in AWS Robomaker running 50 mission hours every
@@ -149,7 +144,7 @@
             <div class="row bottom-row">
                 <div class="col-sm-offset-3 col-sm-7">
                     <div class="inner-text">
-                        <strong><a class="discrete-links" href="./work/student-life.html#community-advisor">Community
+                        <strong><a class="discrete-links" href="/work/student-life.html#community-advisor">Community
                             Advisor</a></strong> - Carnegie Mellon University
                         <ul>
                             <li>Ensured safety and security of 261 residents living in apartment-style living</li>
@@ -166,15 +161,13 @@
                     </div>
                 </div>
             </div>
-            <!-- PROJECTS -->
             <div class="row top-row">
                 <div class="col-sm-3">
-                    <h3><a class="discrete-links" href="./projects.html">PROJECTS</a></h3>
+                    <h3><a class="discrete-links" href="/projects.html">PROJECTS</a></h3>
                 </div>
                 <div class="col-sm-7">
                     <div class="inner-text">
-                        <strong><a class="discrete-links" href="./projects/music-tech-capstone.html">Depth-Controlled
-                            Ambisonic Audio</a></strong> (Music and Technology Final Project)
+                        <strong><a class="discrete-links" href="/projects/music-tech-capstone.html">Depth-Controlled Ambisonic Audio</a></strong> (Music and Technology Final Project)
                         <ul>
                             <li>Interfaced with Microsoft Kinect sensor to track user movements in a 360° speaker
                                 ring</li>
@@ -193,7 +186,7 @@
             <div class="row middle-row">
                 <div class="col-sm-offset-3 col-sm-7">
                     <div class="inner-text">
-                        <strong><a class="discrete-links" href="./projects/ece-capstone.html">3D Object Reconstruction</a></strong> (Electrical and Computer Engineering Capstone)
+                        <strong><a class="discrete-links" href="/projects/ece-capstone.html">3D Object Reconstruction</a></strong> (Electrical and Computer Engineering Capstone)
                         <ul>
                             <li>Developed a system that creates 3D models of real-world objects</li>
                             <li>Utilized point cloud technology, Nearest Neighbor Filtering, Euclidean Clustering for Segmentation, Multiple Viewpoint Registration, and Fast Triangulation Meshing</li>
@@ -222,14 +215,13 @@
                     </div>
                 </div>
             </div>
-            <!-- RESEARCH -->
             <div class="row top-row">
                 <div class="col-sm-3">
                     <h3>RESEARCH</h3>
                 </div>
                 <div class="col-sm-7">
                     <div class="inner-text">
-                        <strong><a class="discrete-links" href="./projects/non-contact-eeg.html">Non-Contact EEG System</a></strong> - Carnegie Mellon University
+                        <strong><a class="discrete-links" href="/projects/non-contact-eeg.html">Non-Contact EEG System</a></strong> - Carnegie Mellon University
                         <ul>
                             <li>Designed a non-contact electrode EEG system for Pulkit Grover as a better alternative to dry/wet contact electrode systems</li>
                             <li>Researched current systems, engineered split channel electrodes, and connected several components on printed circuit boards (PCBs)</li>
@@ -245,7 +237,7 @@
             <div class="row bottom-row">
                 <div class="col-sm-offset-3 col-sm-7">
                     <div class="inner-text">
-                        <strong><a class="discrete-links" href="./projects/hybrid-instruments.html">Hybrid Instruments</a></strong> - Carnegie Mellon University
+                        <strong><a class="discrete-links" href="/projects/hybrid-instruments.html">Hybrid Instruments</a></strong> - Carnegie Mellon University
                         <ul>
                             <li>Engineered pre-amplifiers for contact microphones with PCBs designed in EAGLE</li>
                             <li>Evaluated performance on 3D printed phone cases with string bows attached</li>
@@ -259,7 +251,6 @@
                     </div>
                 </div>
             </div>
-            <!-- RELEVANT SKILLS -->
             <div class="row">
                 <div class="col-sm-3">
                     <h3>RELEVANT SKILLS</h3>
@@ -273,7 +264,6 @@
                     </div>
                 </div>
             </div>
-            <!-- COURSEWORK -->
             <div class="row">
                 <div class="col-sm-3">
                     <h3>COURSEWORK</h3>
@@ -299,7 +289,6 @@
                     </div>
                 </div>
             </div>
-            <!-- LEADERSHIP POSITIONS -->
             <div class="row top-row">
                 <div class="col-sm-3">
                     <h3>LEADERSHIP POSITIONS</h3>
