--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Unordered Meta Content -->
-        <title>David Buzzell</title>
-        <meta name="author" content="David Buzzell">
+        <title>david bekom</title>
+        <meta name="author" content="david bekom">
         <meta name="description" content="Online Resume for David Buzzell">
         <link rel="shortcut icon" href="/favicon.ico">
 
@@ -26,7 +26,7 @@
     <body>
         <section class="container">
             <div class="page-header">
-                <h1>Contact</h1>
+                <h1>Contacts</h1>
             </div>
 
             <div class="row">
@@ -42,7 +42,7 @@
 
             <div class="contact-info">
                 <br>
-                <h2><strong>Phone Number:</strong> <a href="tel:+14045851629">(404) 585-1629</a></h2>
+                <h2><strong>Phone Number:</strong> <a href="tel:+1876909490">(404) 585-324535</a></h2>
                 <h2><strong>Email Address:</strong> <a href="mailto:mail@davidbuzzell.com">mail@davidbuzzell.com</a></h2>
                 <br>
                 <span>
