--- a/work/student-life.html
+++ b/work/student-life.html
@@ -58,7 +58,7 @@
             <div class="row" id="community-advisor">
                 <div class="col-lg-12">
                     <p class="project-text">
-                        <strong>Community Advisor:</strong> The Community Advisor (CA) role is a unique one not offered at many universities or
+                        <b>Community Advisor:</b> The Community Advisor (CA) role is a unique one not offered at many universities or
                         other residential programs. The CA role is more than a "promoted/senior RA"; the CA is also a partner to the Housefellow in
                         order to keep the house community running successfully day-to-day. In my role, I was the CA for an apartment-style living
                         community of 261 upperclassmen residents and 8 RAs, all working together to bring a traditionally separated community together
@@ -72,8 +72,8 @@
             <div class="row" id="resident-assistant">
                 <div class="col-lg-12">
                     <p class="project-text">
-                        <strong>Resident Assistant:</strong> In this role I provided leadership to about 600 students (<em>sophomore year:</em>
-                        381 upperclassmen &amp; graduate students; <em>junior year:</em> 209 freshmen students) in both apartment-style and dormitory living,
+                        <b>Resident Assistant:</b> In this role I provided leadership to about 600 students (<i>sophomore year:</i>
+                        381 upperclassmen &amp; graduate students; <i>junior year:</i> 209 freshmen students) in both apartment-style and dormitory living,
                         with my floor containing 40-52 students. I created and promoted many specialized events for my residents to promote personal
                         development and continued learning, including events where residents cooked dinners from all around the world together,
                         personal sessions where I taught a series of audio technology and production skills to residents, and trips to get out to visit
@@ -84,7 +84,7 @@
             <div class="row" id="pre-college">
                 <div class="col-lg-12">
                     <p class="project-text">
-                        <strong>Pre-College Counselor:</strong> The Pre-College Program at Carnegie Mellon University allows current high school students the
+                        <b>Pre-College Counselor:</b> The Pre-College Program at Carnegie Mellon University allows current high school students the
                         opportunity to experience an undergraduate college experience for 6 weeks during the summer. In line with college experience, I was
                         hired as a counselor for the program, acting mostly as an RA for the 550 high school students under a total staff of 41. While many of
                         the skills and events carried over from the RA experience, there are some differences when working with minors. Overall, this was an
