PR review comments

--- a/resume.html
+++ b/resume.html
@@ -112,8 +112,7 @@
                                 hours/week</li>
                             <li>Reduced manual testing time by 30% through weekly 1:1 training sessions</li>
                             <li>Collaborated with an 8-person team to deliver new software features every 3 weeks</li>
-                            <li>Pioneered 466 code standards through <em>Pylint</em> and distributing code documentation
-                                built by configuring <em>Sphinx</em></li>
+                            <li>Pioneered 466 code standards (Pylint) and distributing code documentation (Sphinx)</li>
                         </ul>
                     </div>
                 </div>
@@ -203,6 +202,7 @@
             <div class="row bottom-row">
                 <div class="col-sm-offset-3 col-sm-7">
                     <div class="inner-text">
+                        <!-- TODO: Move this link to #embedded-project-link -->
                         <b><a class="discrete-links" href="#embedded-project-link">Embedded Real-Time Operating System</a></b>
                         (<a class="discrete-links" href="https://course.ece.cmu.edu/~ece349/f16/docs/18-349_syllabus.pdf">18-349</a>
                         Final Class Project)
