This was pretty easy, not gonna lie

--- a/projects/ece-capstone.html
+++ b/projects/ece-capstone.html
@@ -32,7 +32,7 @@
                     <div class="btn-group btn-group-justified">
                         <a href="../index.html" class="btn btn-primary">Home</a>
                         <a href="../resume.html" class="btn btn-primary">Resume</a>
-                        <a href="../projects.html" class="btn btn-primary">Projects</a>
+                        <a href="../projects/index.html" class="btn btn-primary">Projects</a>
                         <a href="../contact.html" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
