--- a/projects/index.html
+++ b/projects/index.html
@@ -32,11 +32,11 @@
                     <div class="btn-group btn-group-justified">
                         <a href="/index.html" class="btn btn-primary">Home</a>
                         <a href="/resume.html" class="btn btn-primary">Resume</a>
-                        <a href="/projects.html" class="btn btn-primary active">Projects</a>
+                        <a href="/projects/index.html" class="btn btn-primary active">Projects</a>
                         <a href="/contact.html" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
-            </div>
+            </div>`
             <div class="row">
                 <figure class="col-sm-4">
                     <h1 class="centered-head small-head">Capstone Projects</h1>
